--- a/_config.yml
+++ b/_config.yml
@@ -13,22 +13,19 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+title: リアル・サイボーグ
+description: ""
+author: フジ・ナカハラ
+baseurl: "/real-cyborg" # the subpath of your site, e.g. /blog
+url: "https://fuji-nakahara.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+timezone: Asia/Tokyo
+lang: ja_JP
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-fuji
 plugins:
-  - jekyll-feed
+  - jekyll/ruby_converter
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
@@ -41,3 +38,18 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+# Front Matter defaults
+defaults:
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "novel"
+
+# Theme settings
+homepage: "https://fuji-nakahara.github.io/"
+google_analytics: UA-118273401-1
+show_excerpts: false
+show_date: false
+date_format: "%Y年%m月%d日"
