--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: リアル・サイボーグ
+title: サイボーグ・クラスメイト
 description: ""
 author: フジ・ナカハラ
-baseurl: "/real-cyborg" # the subpath of your site, e.g. /blog
+baseurl: "/cyborg-classmate" # the subpath of your site, e.g. /blog
 url: "https://fuji-nakahara.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 timezone: Asia/Tokyo
 lang: ja_JP
