--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: サイボーグ・クラスメイト
-description: ""
+description: ぼくがサイボーグのクラスメイト「ケイ」と過ごした1ヶ月間
 author: フジ・ナカハラ
 baseurl: "/cyborg-classmate" # the subpath of your site, e.g. /blog
 url: "https://fuji-nakahara.github.io" # the base hostname & protocol for your site, e.g. http://example.com
